# comp-3

./: .coverage  .gitignore  ISA.md  Makefile  README.md  REPORT.md  output.json  pyproject.toml
.github/workflows/: python-app.yml
comp3/common/: config.py  instructions.py
comp3/compiler/: __init__.py  __main__.py  ast.py  backend.py  lexer.py  preprocessing.py
comp3/machine/: __init__.py  __main__.py  common.py  components.py  control_unit.py  datapath.py  microcode.py  microcode_readable
examples/: cat.lisq  div_test.lisq  euler_problem.lisq  euler_problem_1.lisq  hello.lisq  hello_user_name.lisq  ne_test.lisq  std_string.lisq  test.lisq
lisq_lib/: math.lisq  strings.lisq
resources/: cat_res
src/compiler/: ast.py  lexer.py
src/isa/: instructions.py
tests/: test_golden.py
tests/golden_tests/: cat.yml  hello.yml
tests/machine/: test_alu.py
