[tool.poetry]
name = "comp3"
version = "0.1.0"
description = "Lab project for Computer Architecture course"
authors = ["Dmitri Tsiu"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
